css/styles.css
body {
    color: #4a4a4a;
    font-size: 14pt;
    line-height: 1.5;
    font-family: 'Montserrat', sans-serif;
}

h1 {
    font-size: 2rem;
}

.highlight {
  background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #f8c435 20%);
}

h2 {
    font-size: 1.5rem;
    font-weight: 600;
    color: #2576b7;
}

.hero-image {
    background-image: url("/home/debbie/Desktop/projects/info-tech-workshops/img/hero.jpg");
    height: 500px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
  }

  .lg-title {
    font-size: 4rem;
    color: #2576b7;
    font-weight: 700;
  }
  
  .hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #fff;
  }

  .container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
  }

  .section {
    text-align: center;
    padding: 20px;
  }

  .better-wrkshps-wrapper {
    display: grid; 
    grid-template-columns: 1fr 3fr 1fr 3fr; 
    grid-template-rows: repeat(2, 1fr); 
    grid-column-gap: 2px;
    grid-row-gap: 10px;
  }

  .description {
    text-align: left;
    padding: 20px;
  }

  .wrkshp-type-wrapper {
    display: grid; 
    grid-template-columns: repeat(2, 1fr); 
    grid-template-rows: repeat(2, 1fr); 
    grid-column-gap: 10px;
  }

  #parallelogram {
    max-width: 75%;
    height: 150px;
    transform: skew(20deg);
    background: #f8c435;
    margin: 0 auto;
  }

  .client-feedback {
    display: flex;
    flex-direction: row;
  }

  .contact {
    display: grid; 
    grid-template-columns: repeat(4, 1fr); 
    grid-column-gap: 10px;
  }


  @media screen and (max-width: 500px) {
    .better-wrkshps-wrapper {
      grid-template-columns: 1fr 2fr;
    }

    .description {
      padding: 5px;
    }

    .lg-title {
      font-size: 3rem;
      font-weight: 700;
    }

    .h1 {
      font-size: 1.5rem;
    }

    .client-feedback {
      flex-direction: column;
    }

    .wrkshp-type-wrapper {
      grid-template-columns: 1fr;
      grid-column-gap: 5px;
      grid-row-gap: 5px;
      text-align: center;
    }

    .contact {
      grid-template-columns: 1fr;
    }
  }

